<resources>
    <string name="app_version">Version</string>
    <string name="lbl_login_account">Login to your account</string>
    <string name="hint_phone_number">Enter your Mobile Number</string>
    <string name="txt_login_with_touch_id">Login with Touch ID</string>
    <string name="txt_login" formatted="true">Login</string>
    <string name="txt_register">Register</string>
    <string name="lbl_enter_password">Enter Your Password</string>
    <string name="hint_password">Enter Password</string>
    <string name="enter_user_name">Please Enter your Email Address</string>
    <string name="enter_valid_username">Please enter a valid Email Address</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="enter_valid_phone">Please enter a valid mobile number</string>
    <string name="enter_password">New Password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="password_less_than_six">Password length should not be less than 6 characters</string>
    <string name="password_greater_than_thirty">Password length should not be greater than 30 characters</string>
    <string name="error_valid_password">Please enter valid password</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="enter_valid_mobile">Please enter a valid mobile number</string>
    <string name="lbl_enter_email_address">Enter Email Address</string>
    <string name="lbl_register_an_account" translatable="false">Register</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="lbl_email">Email Address</string>
    <string name="lbl_description_term_condition">To continue ,agree to our</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_continue_and_pay">Confirm &amp; Pay</string>
    <string name="txt_confirm_and_continue">Confirm &amp; Continue</string>
    <string name="txt_switchto_english">التبديل إلى اللغة الإنجليزية</string>
    <string name="txt_switchto_arabic">Switch to Arabic</string>
    <string name="txt_english">English</string>
    <string name="txt_arabic">العربية</string>
    <string name="lbl_select_language">Select Language</string>
    <string name="lbl_term_condition">Terms and Conditions</string>
    <string name="lbl_forgot_pwd">Forgot Your Password?</string>
    <string name="error_t_c">Please accept our Terms &amp; Conditions</string>
    <string name="hint_pls_register">, Please Register</string>
    <string name="txt_title_enter_otp">Enter OTP</string>
    <string name="one_time_password">One Time Password</string>
    <string name="txt_desc_otp_sent">A One Time Password (OTP) has been sent to your phone mobile number. Please enter</string>
    <string name="txt_otp_sent_email">An OTP has been sent to your email address</string>
    <string name="txt_desc_otp_verify">Please verify here.</string>
    <string name="txt_desc_otp_one">A One Time Password (OTP) will be sent to the mobile number you provided</string>
    <string name="txt_desc_touch">Place your thumb or finger on \n the Home Button.</string>
    <string name="txt_title_touch">Set up Touch ID</string>
    <string name="txt_title_touch_already_set">Touch ID Already Setup</string>
    <string name="txt_no_thanks">No thanks</string>
    <string name="hint_x">x</string>
    <string name="error_enter_opt">Invalid Onetime Password (OTP). Please try again</string>
    <string name="txt_desc_no_figerprint">Set up your fingerprint for faster &amp; easier access to your account</string>
    <string name="txt_desc_exiest_figerprint">Use existing fingerprint set on your device. \n No need to enter mobile number for login</string>
    <string name="txt_enable_fingerprint">Enable fingerprint</string>
    <string name="txt_setup_fingerprint">Set up fingerprint</string>
    <string name="txt_desc_touchlogin">You have enabled login via TouchID for faster access to your account</string>
    <string name="timer">00:00:00</string>
    <string name="sucess_msg_otp">Otp resend successfully</string>
    <string name="dialog_msg_change_email">Are you sure, you want to change your email address?</string>
    <string name="dialog_msg_change_mobile">Are you sure, you want to change your mobile number?</string>
    <string name="txt_title_card_detail_store">Card details securely stored. \n proceed to payment</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_confirm_payment">Confirm payment</string>
    <string name="txt_title_purchase_report">Your purchased PDF report cost</string>
    <string name="txt_base_pdf_report">Base Fee (pdf report)</string>
    <string name="txt_total">Total</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="txt_desc_forgot_password">Enter your registered email address, and we will send you A OneTime Password (OTP) to the mobile number you provided. </string>
    <string name="txt_send_reset_link">Send Reset Link</string>
    <string name="txt_ok">OK</string>
    <string name="txt_desc_forgot_link">A reset link has been sent to your email ID. Follow the instructions to change your password</string>
    <string name="txt_update_password">Update Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password_for_create_password">Confirm Password</string>
    <string name="error_password_not_match">Password and confirm password does not match</string>
    <string name="error_confirm_password">Please enter confirm password.</string>
    <string name="txt_upcoming_payment">Amount of Upcoming Rental Payment</string>
    <string name="txt_no_of_payment">No. of payments</string>
    <string name="txt_to_be_paid">To be paid</string>
    <string name="txt_aed">AED</string>
    <string name="txt_my_contract">My Contracts</string>
    <string name="txt_quarterly_payment">Quarterly Payment</string>
    <string name="txt_biannual_payment">Biannual Payment</string>
    <string name="txt_annual_payment">Annual Payment</string>
    <string name="txt_payment_due">Payment due</string>
    <string name="txt_my_scan">My Scans</string>
    <string name="txt_scan_a_tenant">Scan a tenant</string>
    <string name="txt_scan_tenant">Scan tenant</string>
    <string name="txt_add_contract_manually">Add contract manually</string>
    <string name="txt_add_new_tenant">Add New Tenant</string>
    <string name="hint_scan_a_tenant">You can scan a tenant\'s EID Or use Trade License to generate Tenant Score and report.</string>
    <string name="txt_charges">Charges:</string>
    <string name="txt_base_fee">Base Fee (PDF Report)</string>
    <string name="txt_dont_show_msg">Don\'t show this message again. </string>
    <string name="btn_scan_now">Scan Now</string>
    <string name="txt_vat">VAT </string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_scan">Are you sure you want to delete the scan?</string>
    <string name="txt_no_contract">Your purchased Tenant Score will appear here</string>
    <string name="txt_welcome">Welcome,</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_tenant_score">Tenant Score</string>
    <string name="txt_welcome_user">Welcome user,</string>
    <string name="dialog_msg_change_language">Are you sure want to change application language?</string>
    <string name="txt_12">12</string>
    <string name="txt_pending_reports">Pending Reports</string>
    <string name="txt_paid_reports">Paid Reports</string>
    <string name="txt_please_confirm_the_clearence">Please confirm the clearence</string>
    <string name="txt_iban_2338">IBAN **** **** 2338</string>
    <string name="txt_u_name">Sheikh Haseeb</string>
    <string name="txt_ud_name">20 April 2019</string>
    <string name="txt_u_left_name">6 days left to cheque clearence</string>
    <string name="txt_aeb_name">25 April 2019</string>
    <string name="txt_aeb_title">AED 2,000</string>
    <string name="txt_pdf_not_generated">Pdf not generated</string>
    <string name="txt_dashboard_desc">A hassle free way to asses the likelihood of your tenant to honor their rental obligations</string>
    <string name="txt_cheque_scan">Cheques\nscanned</string>
    <string name="txt_cheque">Cheques</string>
    <string name="txt_scanned">scanned</string>
    <string name="txt_last_two_week">In the last 2 weeks</string>
    <string name="txt_cheque_due">Cheques\nDue</string>
    <string name="txt_due">Due</string>
    <string name="txt_next_two_week">In the next 2 weeks</string>
    <string name="txt_days">Days</string>
    <string name="txt_cleared">Cleared</string>
    <string name="txt_bounced">Bounced</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="hint_search_by">Search by name</string>
    <string name="txt_to">To</string>
    <string name="txt_range_amount">AED 1000 - 10,000</string>
    <string name="txt_capture">Capture</string>
    <string name="txt_manual_capture">Manual Capture</string>
    <string name="dialog_msg_status_cleared">Are you sure want to change the status of this cheque as Cleared?</string>
    <string name="dialog_msg_status_bounced">Are you sure want to change the status of this cheque as bounced?</string>
    <string name="txt_payment_due_date">Payment Due Date</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_clear_all">Clear All</string>
    <string name="txt_remove">Remove</string>
    <string name="no" translatable="false">No</string>
    <string name="txt_confirm">Confirm</string>
    <string name="hint_date_of_birth">Enter Date of Birth</string>
    <string name="contact_us">Contact Us</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="your_payment_has_been_successfully_processed_nthank_you">Your payment has been successfully processed, Thank You!</string>
    <string name="faqs">FAQs</string>
    <string name="enter_current_password">Current Password</string>
    <string name="na_text">We have found no credit history or activity on your name.\n\nFor more information use the actions below</string>
    <string name="no_available_score_title">Credit Score: Not Available</string>
    <string name="error">Error</string>
    <string name="dob_validation">Please select date of birth</string>
    <string name="passport_number_optional_bracket">Passport Number (Optional)</string>
    <string name="password_title">Your password must contain</string>
    <string name="password_validation_one">8 Characters long</string>
    <string name="password_validation_two">Uppercase Character</string>
    <string name="password_validation_three">Lowercase Character</string>
    <string name="password_validation_four">Special Character *([@#$%^&amp;+=])</string>
    <string name="password_validation_five">At least a Number</string>
    <string name="add_passport_dob_desc">Please complete the following details to proceed with your request</string>
    <string name="date_of_birth_new">Date of Birth</string>
    <string name="help_us_for_passport_new">Help us find your records more quickly</string>
    <string name="txt_submit_new">Submit</string>
    <string name="txt_cancel_new">Cancel</string>
    <string name="sop1_desc_first">Your account is unverified, please visit the nearest UAE PASS <u><font color='#1058E0'> Kiosk</font></u> </string>
    <string name="sop1_desc_second">For more information, kindly contact  <u><font color='#1058E0'>800-Bureau (800 287 328)</font></u> </string>
</resources>