<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_topcurv_white"
        android:orientation="vertical">

        <TextView
            style="@style/SmallFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llInputs"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/add_passport_dob_desc" />

        <LinearLayout
            android:id="@+id/llInputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:orientation="vertical">

                <com.aecb.presentation.commontitleview.CustomInputText
                    android:id="@+id/inputIdDateOfBirth"
                    style="@style/SmallFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusForward="@+id/edtPassport"
                    android:singleLine="true"
                    android:textDirection="ltr"
                    app:enabled="true"
                    app:focusable="false"
                    app:hideUnderLine="false"
                    app:hint="@string/hint_date_of_birth"
                    app:maxLength="18"
                    app:titleText="@string/date_of_birth_new" />



            <View
                android:id="@+id/viewLineDOB"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/tvDOBValidation"
                style="@style/VerySmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/dob_validation"
                android:textColor="@color/text_color"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLoutPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/passport_number_optional_bracket"
                android:theme="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassport"
                    style="@style/SmallFont.TextAlineStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingTop="@dimen/_4sdp"
                    android:singleLine="true"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/VerySmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/help_us_for_passport_new"
                android:textColor="@color/text_color"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSubmit"
                style="@style/SmallFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/btn_disable_state"
                android:enabled="false"
                android:text="@string/txt_submit_new"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvCancel"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/txt_cancel_new"
                android:textColor="@color/border_color" />
        </LinearLayout>
    </LinearLayout>
</layout>