<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@drawable/bg_topcurv_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_30sdp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/ExtraMediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/payment_successful"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            style="@style/SmallFont"
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="@string/your_payment_has_been_successfully_processed_nthank_you"
            android:visibility="visible" />


        <Button
            android:id="@+id/btnOk"
             style="@style/SmallFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/bg_white_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/border_color" />

        <Button
            android:id="@+id/btnNo"
             style="@style/SmallFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/bg_white_button"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/border_color"
            android:visibility="gone" />
    </LinearLayout>
</layout>