<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color"
        android:orientation="vertical">

        <com.aecb.presentation.customviews.ToolbarView
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_21sdp"
            android:orientation="vertical">

            <TextView
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPwdValidationOne"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_password_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/password_validation_one"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPwdValidationTwo"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_password_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/password_validation_two"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPwdValidationThree"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_password_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/password_validation_three"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPwdValidationFour"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_password_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/password_validation_four"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPwdValidationFive"
                style="@style/SmallFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_password_grey"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/password_validation_five"
                android:textColor="@color/black" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLoutCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/enter_current_password"
                    android:theme="@style/TextLabel"
                    android:visibility="gone"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCurrentPassword"
                        style="@style/SmallFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/password"
                    android:theme="@style/TextLabel"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        style="@style/SmallFont.TextAlineStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:digits="ABCEDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxvyz0123456789*([@#$%^&amp;+=])"
                        android:nextFocusForward="@+id/edtConfirmPassword"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/txtInputLoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/hint_confirm_password_for_create_password"
                    android:theme="@style/TextLabel"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtConfirmPassword"
                        style="@style/SmallFont.TextAlineStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_4sdp"
                        android:singleLine="true"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                style="@style/SmallFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_45sdp"
                android:background="@drawable/btn_disable_state"
                android:enabled="false"
                android:text="@string/txt_confirm"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</layout>